# Ultra_Fast_Lane_Detection_TensorRT

./: .gitignore  README.md  build_engine.py  evaluate.py  readme.md  requirements.txt  torch2trt
UFLD_C++/: CMakeLists.txt  README.md  calibrator.cpp  calibrator.h  export_trtcy.py  logging.h  main.cpp  test.cpp  util_test.hpp
UFLD_C++/model/: model.py
UFLD_Tiny/: UFLD.py  demo_trt.py  onnx_to_tensorrt.py  onnx_to_tensorrt_int8.py  torch2onnx.py
UFLD_Tiny/configs/: tusimple_4.py
UFLD_Tiny/model/: model.py
UFLD_Tiny/utils/: common.py  factory.py  mnist_calibration.cache  onnx2trt.py  onnx2trt_test.py  onnx_to_tensorrt.py
UFLD_torch2trt/: UFLD.py  demo_torch2trt.py  export_trt.py  inference_torch2trt.py
UFLD_torch2trt/configs/: tusimple.py
UFLD_torch2trt/data/: dataloader.py
UFLD_torch2trt/model/: model.py
onnx_dynamic_int8/: UFLD.py  common.py  onnx_parser.py
onnx_dynamic_int8/model/: model.py
onnx_dynamic_int8/utils/: common.py
